--- a/assets/styles/scss/abstracts/mixins/components/_c-box-border.scss
+++ b/assets/styles/scss/abstracts/mixins/components/_c-box-border.scss
@@ -2,7 +2,7 @@
 // *  <<--------------------<< BOX BORDER >>-------------------->>
 \* -------------------------------------------------------------------------- */
 
-.box {
+.box-outer {
   @include box-dimensions($width: 100%, $height: 100%);
   @include box-shadow(2);
 
