--- a/assets/styles/scss/abstracts/mixins/components/_c-main-header.scss
+++ b/assets/styles/scss/abstracts/mixins/components/_c-main-header.scss
@@ -5,7 +5,7 @@
 // -  <---------------| Main-Header |--------------->
 @mixin main-header {
   .c-header {
-    position: fixed;
+    // position: fixed;
     z-index: 1;
     top: 0;
     padding-top: $buffer--s;
