--- a/assets/styles/scss/abstracts/variables/_variables--v2.scss
+++ b/assets/styles/scss/abstracts/variables/_variables--v2.scss
@@ -276,7 +276,8 @@ $button--box-shadow---before: 0 1px 0 2px rgba(0, 0, 0, 0.3),
 // #  Card 1
 $card--width: 400px;
 $card--height: 80vh;
-$card--aspect-ratio: 9 / 16;
+$card--aspect-ratio--portrait: 9 / 16;
+$card--aspect-ratio--landscape: 16 / 9;
 
 // *  <<--------------------<< Transitions >>-------------------->>
 $transition--default: all 0.35s ease;
