--- a/assets/styles/scss/base/_b-sectioning.scss
+++ b/assets/styles/scss/base/_b-sectioning.scss
@@ -3,6 +3,15 @@
 \* -------------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------- *\
+// -  <<--------------------<< NON-SEMANTIC  >>-------------------->>
+\* -------------------------------------------------------------------------- */
+
+// #  <---------------| <div> |--------------->
+div {
+  @include box-dimensions;
+}
+
+/* -------------------------------------------------------------------------- *\
 -  <<--------------------<< MAIN >>-------------------->>
 \* -------------------------------------------------------------------------- */
 
@@ -21,11 +30,33 @@ article {
 
 // #  <---------------| <section> |--------------->
 section {
-  // @include box-dimensions(m, $max-width: $max-width--root, $margin: $center-me);
-  @include box-dimensions(s, $margin: $center-me);
+  @include box-dimensions(m, $max-width: 100vw);
 
   min-height: 100vh;
   background-color: rgb(182, 167, 54);
+  // background-color: var(--color-background);
+
+  @include breakpoint(l) {
+    padding: $buffer--l;
+  }
+
+  > h2 {
+    margin-bottom: $buffer--s;
+
+    @include breakpoint(l) {
+      margin-bottom: $buffer--l - $buffer--s;
+    }
+  }
+
+  > div {
+    @include box-dimensions(
+      s,
+      $max-width: $max-width--root,
+      $margin: $center-me
+    );
+
+    
+  }
 }
 
 // #  <---------------| <aside> |--------------->
@@ -35,15 +66,6 @@ aside {
   @include breakpoint(l) {
     padding: $buffer--l;
   }
-}
-
-/* -------------------------------------------------------------------------- *\
-// -  <<--------------------<< NON-SEMANTIC  >>-------------------->>
-\* -------------------------------------------------------------------------- */
-
-// #  <---------------| <div> |--------------->
-div {
-  @include box-dimensions;
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -90,19 +112,19 @@ footer {
 
 // #  <---------------| <main> |--------------->
 main {
-  @include box-dimensions(m, $max-width: 100vw);
+  @include box-dimensions($max-width: 100vw);
 
   // background-color: var(--color-background);
   background-color: rgb(6, 204, 6);
 
-  @include breakpoint(l) {
-    padding: $buffer--l;
-  }
+  // @include breakpoint(l) {
+  //   padding: $buffer--l;
+  // }
 
   > div {
     @include box-dimensions(
-      s,
-      $max-width: $max-width--root,
+      // s,
+      // $max-width: $max-width--root,
       $margin: $center-me
     );
   }
