--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -348,7 +348,7 @@ section {
   max-width: 100vw;
   padding: 1rem;
   min-height: 100vh;
-  background-color: #b6a736;
+  background-color: var(--color-background);
 }
 
 @media (min-width: 1600px) {
@@ -432,11 +432,12 @@ main {
   width: 100%;
   max-width: 100vw;
   padding: null;
-  background-color: #06cc06;
+  background-color: var(--color-background);
 }
 
 main > div {
   width: 100%;
+  max-width: 1920px;
   margin: 0 auto;
   padding: null;
 }
@@ -547,7 +548,7 @@ h6 + p::first-letter {
   font-weight: 600;
   line-height: 1.25;
   text-transform: capitalize;
-  color: var(--color-text--darkest);
+  color: var(--color-text--darker);
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -588,7 +589,7 @@ dd {
   width: 100%;
   padding: null;
   padding: 0.125rem 0;
-  color: var(--color-text--lighter);
+  color: var(--color-text--light);
   font-family: "Poppins", sans-serif;
   font-size: 0.9rem;
   font-stretch: normal;
@@ -706,7 +707,7 @@ blockquote {
   width: 100%;
   padding: null;
   padding: 0.125rem 0;
-  color: var(--color-text--lighter);
+  color: var(--color-text--light);
   font-family: "Poppins", sans-serif;
   font-size: 0.9rem;
   font-stretch: normal;
@@ -714,14 +715,14 @@ blockquote {
   font-variant: normal;
   font-weight: 300;
   line-height: 1.5;
-  border-left: 0.25rem solid var(--color-tertiary--darkest);
+  border-left: 0.25rem solid var(--color-tertiary--darker);
 }
 
 blockquote cite {
   width: 100%;
   padding: null;
   padding: 0.125rem 0;
-  color: var(--color-text--lighter);
+  color: var(--color-text--light);
   font-family: "Poppins", sans-serif;
   font-size: 0.9rem;
   font-stretch: normal;
@@ -758,7 +759,7 @@ pre {
   width: 100%;
   padding: null;
   padding: 0.125rem 0;
-  color: var(--color-text--lighter);
+  color: var(--color-text--light);
   font-family: "Poppins", sans-serif;
   font-size: 0.9rem;
   font-stretch: normal;
@@ -788,8 +789,8 @@ b {
 
 code {
   padding: 0.25rem 0.5rem;
-  border: 1px solid var(--color-secondary--lighter);
-  background: var(--color-tertiary--lighter);
+  border: 1px solid var(--color-secondary--light);
+  background: var(--color-tertiary--light);
   border-radius: 8px;
   color: var(--color-primary);
   font-family: "Fira Mono", monospace;
@@ -828,8 +829,8 @@ i {
 
 kbd {
   padding: 0.25rem 0.5rem;
-  border: 1px solid var(--color-secondary--lighter);
-  background: var(--color-tertiary--lighter);
+  border: 1px solid var(--color-secondary--light);
+  background: var(--color-tertiary--light);
   border-radius: 8px;
   color: var(--color-primary);
   font-family: "Fira Mono", monospace;
@@ -851,7 +852,7 @@ mark {
   font-variant: normal;
   font-weight: 400;
   line-height: 1.5;
-  background-color: var(--color-tertiary--lighter);
+  background-color: var(--color-tertiary--light);
 }
 
 s {
@@ -869,8 +870,8 @@ s {
 
 samp {
   padding: 0.25rem 0.5rem;
-  border: 1px solid var(--color-secondary--lighter);
-  background: var(--color-tertiary--lighter);
+  border: 1px solid var(--color-secondary--light);
+  background: var(--color-tertiary--light);
   border-radius: 8px;
   color: var(--color-primary);
   font-family: "Fira Mono", monospace;
@@ -884,7 +885,7 @@ samp {
 
 small {
   padding: 0.125rem 0;
-  color: var(--color-text--lighter);
+  color: var(--color-text--light);
   font-family: "Poppins", sans-serif;
   font-size: 0.9rem;
   font-stretch: normal;
@@ -908,7 +909,7 @@ strong {
 
 sub {
   padding: 0.125rem 0;
-  color: var(--color-text--lighter);
+  color: var(--color-text--light);
   font-family: "Poppins", sans-serif;
   font-size: 0.9rem;
   font-stretch: normal;
@@ -921,7 +922,7 @@ sub {
 
 sup {
   padding: 0.125rem 0;
-  color: var(--color-text--lighter);
+  color: var(--color-text--light);
   font-family: "Poppins", sans-serif;
   font-size: 0.9rem;
   font-stretch: normal;
@@ -947,8 +948,8 @@ u {
 
 var {
   padding: 0.25rem 0.5rem;
-  border: 1px solid var(--color-secondary--lighter);
-  background: var(--color-tertiary--lighter);
+  border: 1px solid var(--color-secondary--light);
+  background: var(--color-tertiary--light);
   border-radius: 8px;
   color: var(--color-primary);
   font-family: "Fira Mono", monospace;
@@ -977,16 +978,19 @@ a {
   padding: 0.25rem 0;
   font-family: 'Roboto Mono', monospace;
   text-decoration: none;
-  -webkit-transition: color 0.35s ease;
-  transition: color 0.35s ease;
+}
+
+a svg {
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
 }
 
 a:hover {
-  color: var(--color-tertiary--lightest);
+  color: var(--color-tertiary--lighter);
 }
 
 a:hover path {
-  color: var(--color-tertiary--lightest);
+  color: var(--color-tertiary--lighter);
 }
 
 a::before {
@@ -1008,7 +1012,7 @@ a::after {
   display: block;
   width: 0;
   height: 2px;
-  background: var(--color-tertiary--lightest);
+  background: var(--color-tertiary--lighter);
   content: '';
   -webkit-transition: width 0.35s ease;
   transition: width 0.35s ease;
@@ -1016,7 +1020,7 @@ a::after {
 
 a:hover::before {
   width: 100%;
-  background: var(--color-tertiary--lightest);
+  background: var(--color-tertiary--lighter);
   -webkit-transition: width 0.35s ease;
   transition: width 0.35s ease;
 }
@@ -1067,7 +1071,7 @@ bdo {
 
 cite {
   padding: 0.125rem 0;
-  color: var(--color-text--lighter);
+  color: var(--color-text--light);
   font-family: "Poppins", sans-serif;
   font-size: 0.9rem;
   font-stretch: normal;
@@ -1104,7 +1108,7 @@ dfn {
 
 q {
   padding: 0.125rem 0;
-  color: var(--color-text--lighter);
+  color: var(--color-text--light);
   font-family: "Poppins", sans-serif;
   font-size: 0.9rem;
   font-stretch: normal;
@@ -1112,7 +1116,7 @@ q {
   font-variant: normal;
   font-weight: 300;
   line-height: 1.5;
-  border-left: 4px solid var(--color-tertiary--darkest);
+  border-left: 4px solid var(--color-tertiary--darker);
   font-style: italic;
 }
 
@@ -1220,11 +1224,11 @@ math {
 table {
   width: 100%;
   padding: 1rem;
-  border: 2px solid var(--color-secondary--darker);
+  border: 2px solid var(--color-secondary--dark);
   margin: 0.5rem;
-  background: var(--color-tertiary--darker);
+  background: var(--color-tertiary--dark);
   border-radius: 16px;
-  color: var(--color-primary--darker);
+  color: var(--color-primary--dark);
   font-family: "Roboto Mono", monospace;
   font-size: 1.375rem;
   font-stretch: normal;
@@ -1239,11 +1243,11 @@ table {
 thead {
   width: 100%;
   padding: 0.5rem;
-  border: 2px solid var(--color-secondary--darker);
+  border: 2px solid var(--color-secondary--dark);
   margin: 0.5rem;
-  background: var(--color-tertiary--darker);
+  background: var(--color-tertiary--dark);
   border-radius: 16px;
-  color: var(--color-primary--darker);
+  color: var(--color-primary--dark);
   font-family: "Roboto Mono", monospace;
   font-size: 1.375rem;
   font-stretch: normal;
@@ -1256,11 +1260,11 @@ thead {
 tr {
   width: 100%;
   padding: 0.5rem;
-  border: 2px solid var(--color-secondary--darker);
+  border: 2px solid var(--color-secondary--dark);
   margin: 0.5rem;
-  background: var(--color-tertiary--darker);
+  background: var(--color-tertiary--dark);
   border-radius: 16px;
-  color: var(--color-primary--darker);
+  color: var(--color-primary--dark);
   font-family: "Roboto Mono", monospace;
   font-size: 1.375rem;
   font-stretch: normal;
@@ -1273,11 +1277,11 @@ tr {
 tbody {
   width: 100%;
   padding: 0.5rem;
-  border: 2px solid var(--color-secondary--darker);
+  border: 2px solid var(--color-secondary--dark);
   margin: 0.5rem;
-  background: var(--color-tertiary--darker);
+  background: var(--color-tertiary--dark);
   border-radius: 16px;
-  color: var(--color-primary--darker);
+  color: var(--color-primary--dark);
   font-family: "Roboto Mono", monospace;
   font-size: 1.375rem;
   font-stretch: normal;
@@ -1293,7 +1297,7 @@ tbody tr:nth-child(even) {
 }
 
 tbody tr:nth-child(even) button {
-  background-color: var(--color-background--lighter);
+  background-color: var(--color-background--light);
   color: var(--color-text);
 }
 
@@ -1305,11 +1309,11 @@ tbody tr:nth-child(even) button:hover {
 tfoot {
   width: 100%;
   padding: 0.5rem;
-  border: 2px solid var(--color-secondary--darker);
+  border: 2px solid var(--color-secondary--dark);
   margin: 0.5rem;
-  background: var(--color-tertiary--darker);
+  background: var(--color-tertiary--dark);
   border-radius: 16px;
-  color: var(--color-primary--darker);
+  color: var(--color-primary--dark);
   font-family: "Roboto Mono", monospace;
   font-size: 1.375rem;
   font-stretch: normal;
@@ -1322,11 +1326,11 @@ tfoot {
 colgroup {
   width: 100%;
   padding: 0.5rem;
-  border: 2px solid var(--color-secondary--darker);
+  border: 2px solid var(--color-secondary--dark);
   margin: 0.5rem;
-  background: var(--color-tertiary--darker);
+  background: var(--color-tertiary--dark);
   border-radius: 16px;
-  color: var(--color-primary--darker);
+  color: var(--color-primary--dark);
   font-family: "Roboto Mono", monospace;
   font-size: 1.375rem;
   font-stretch: normal;
@@ -1374,11 +1378,11 @@ td {
 form {
   width: 100%;
   padding: 1rem;
-  border: 2px solid var(--color-secondary--darker);
+  border: 2px solid var(--color-secondary--dark);
   margin: 0.5rem;
-  background: var(--color-tertiary--darker);
+  background: var(--color-tertiary--dark);
   border-radius: 16px;
-  color: var(--color-primary--darker);
+  color: var(--color-primary--dark);
   font-family: "Roboto Mono", monospace;
   font-size: 1.375rem;
   font-stretch: normal;
@@ -1391,11 +1395,11 @@ form {
 datalist {
   width: 100%;
   padding: 0.5rem;
-  border: 2px solid var(--color-secondary--darker);
+  border: 2px solid var(--color-secondary--dark);
   margin: 0.5rem;
-  background: var(--color-tertiary--darker);
+  background: var(--color-tertiary--dark);
   border-radius: 16px;
-  color: var(--color-primary--darker);
+  color: var(--color-primary--dark);
   font-family: "Roboto Mono", monospace;
   font-size: 1.375rem;
   font-stretch: normal;
@@ -1408,11 +1412,11 @@ datalist {
 fieldset {
   width: 100%;
   padding: 0.5rem;
-  border: 2px solid var(--color-secondary--darker);
+  border: 2px solid var(--color-secondary--dark);
   margin: 0.5rem;
-  background: var(--color-tertiary--darker);
+  background: var(--color-tertiary--dark);
   border-radius: 16px;
-  color: var(--color-primary--darker);
+  color: var(--color-primary--dark);
   font-family: "Roboto Mono", monospace;
   font-size: 1.375rem;
   font-stretch: normal;
@@ -1425,11 +1429,11 @@ fieldset {
 optgroup {
   width: 100%;
   padding: 0.5rem;
-  border: 2px solid var(--color-secondary--darker);
+  border: 2px solid var(--color-secondary--dark);
   margin: 0.5rem;
-  background: var(--color-tertiary--darker);
+  background: var(--color-tertiary--dark);
   border-radius: 16px;
-  color: var(--color-primary--darker);
+  color: var(--color-primary--dark);
   font-family: "Roboto Mono", monospace;
   font-size: 1.375rem;
   font-stretch: normal;
@@ -1568,7 +1572,7 @@ input:hover {
 input [type='submit'] {
   padding: 0.5rem;
   margin: 0.5rem;
-  background: var(--color-tertiary--lighter);
+  background: var(--color-tertiary--light);
 }
 
 input [type='submit']:active {
@@ -1579,7 +1583,7 @@ input [type='submit']:active {
 input [type='reset'] {
   padding: 0.5rem;
   margin: 0.5rem;
-  background: var(--color-tertiary--lighter);
+  background: var(--color-tertiary--light);
 }
 
 input [type='reset']:active {
@@ -1656,7 +1660,7 @@ input [type='color'] {
 input [type='button'] {
   padding: 0.5rem;
   margin: 0.5rem;
-  background: var(--color-tertiary--lighter);
+  background: var(--color-tertiary--light);
 }
 
 input [type='button']:active {
@@ -1669,19 +1673,19 @@ input:not([type='checkbox']):not([type='radio']) {
 }
 
 input::-webkit-input-placeholder {
-  color: var(--color-text--lightest);
+  color: var(--color-text--lighter);
 }
 
 input:-ms-input-placeholder {
-  color: var(--color-text--lightest);
+  color: var(--color-text--lighter);
 }
 
 input::-ms-input-placeholder {
-  color: var(--color-text--lightest);
+  color: var(--color-text--lighter);
 }
 
 input::placeholder {
-  color: var(--color-text--lightest);
+  color: var(--color-text--lighter);
 }
 
 label {
@@ -1757,19 +1761,19 @@ textarea:hover {
 }
 
 textarea::-webkit-input-placeholder {
-  color: var(--color-primary--lightest);
+  color: var(--color-primary--lighter);
 }
 
 textarea:-ms-input-placeholder {
-  color: var(--color-primary--lightest);
+  color: var(--color-primary--lighter);
 }
 
 textarea::-ms-input-placeholder {
-  color: var(--color-primary--lightest);
+  color: var(--color-primary--lighter);
 }
 
 textarea::placeholder {
-  color: var(--color-primary--lightest);
+  color: var(--color-primary--lighter);
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -1798,7 +1802,7 @@ details {
           align-items: flex-start;
   padding: 0.5rem;
   margin: 0.5rem;
-  background-color: var(--color-background--lighter);
+  background-color: var(--color-background--light);
   border-radius: 4px;
   color: var(--color-text);
 }
@@ -1823,7 +1827,7 @@ dialog {
   border: 0;
   border-color: var(--color-secondary);
   margin: 0.5rem;
-  background-color: var(--color-background--lighter);
+  background-color: var(--color-background--light);
   border-radius: 4px;
   color: var(--color-text);
 }
@@ -1888,43 +1892,53 @@ menu {
   /* #  ---------------------------------------- */
   /* #  text color group */
   /* #  ---------------------------------------- */
-  --color-text--lightest: #4d4d70;
-  --color-text--lighter: #262652;
+  --color-text--lightest: #73738f;
+  --color-text--lighter: #4d4d70;
+  --color-text--light: #262652;
   --color-text: #000033;
-  --color-text--darker: #00002b;
-  --color-text--darkest: #000024;
+  --color-text--dark: #00002b;
+  --color-text--darker: #000024;
+  --color-text--darkest: #00001c;
   /* #  ---------------------------------------- */
   /* #  background color group */
   /* #  ---------------------------------------- */
-  --color-background--lightest: #fafaff;
-  --color-background--lighter: #f9f9ff;
+  --color-background--lightest: #fbfbff;
+  --color-background--lighter: #fafaff;
+  --color-background--light: #f9f9ff;
   --color-background: #f8f8ff;
-  --color-background--darker: #d3d3d9;
-  --color-background--darkest: #aeaeb3;
+  --color-background--dark: #d3d3d9;
+  --color-background--darker: #aeaeb3;
+  --color-background--darkest: #88888c;
   /* #  ---------------------------------------- */
   /* #  primary color group */
   /* #  ---------------------------------------- */
-  --color-primary--lightest: #4e6d85;
-  --color-primary--lighter: #284d6b;
+  --color-primary--lightest: #748c9f;
+  --color-primary--lighter: #4e6d85;
+  --color-primary--light: #284d6b;
   --color-primary: #022e51;
-  --color-primary--darker: #022745;
-  --color-primary--darkest: #012039;
+  --color-primary--dark: #022745;
+  --color-primary--darker: #012039;
+  --color-primary--darkest: #01192d;
   /* #  ---------------------------------------- */
   /* #  secondary color group */
   /* #  ---------------------------------------- */
-  --color-secondary--lightest: #7e9fce;
-  --color-secondary--lighter: #628bc4;
+  --color-secondary--lightest: #99b4d9;
+  --color-secondary--lighter: #7e9fce;
+  --color-secondary--light: #628bc4;
   --color-secondary: #4676b9;
-  --color-secondary--darker: #3c649d;
-  --color-secondary--darkest: #315382;
+  --color-secondary--dark: #3c649d;
+  --color-secondary--darker: #315382;
+  --color-secondary--darkest: #274166;
   /* #  ---------------------------------------- */
   /* #  tertiary color group */
   /* #  ---------------------------------------- */
-  --color-tertiary--lightest: #cdac7e;
-  --color-tertiary--lighter: #c29a62;
+  --color-tertiary--lightest: #d7be99;
+  --color-tertiary--lighter: #cdac7e;
+  --color-tertiary--light: #c29a62;
   --color-tertiary: #b78846;
-  --color-tertiary--darker: #9c743c;
-  --color-tertiary--darkest: #805f31;
+  --color-tertiary--dark: #9c743c;
+  --color-tertiary--darker: #805f31;
+  --color-tertiary--darkest: #654b27;
   /* #  ---------------------------------------- */
   /* #  --color-text hsl */
   /* #  ---------------------------------------- */
