--- a/assets/styles/scss/base/_b-sectioning.scss
+++ b/assets/styles/scss/base/_b-sectioning.scss
@@ -33,8 +33,7 @@ section {
   @include box-dimensions(m, $max-width: 100vw);
 
   min-height: 100vh;
-  background-color: rgb(182, 167, 54);
-  // background-color: var(--color-background);
+  background-color: var(--color-background);
 
   @include breakpoint(l) {
     padding: $buffer--l;
@@ -54,8 +53,6 @@ section {
       $max-width: $max-width--root,
       $margin: $center-me
     );
-
-    
   }
 }
 
@@ -114,18 +111,10 @@ footer {
 main {
   @include box-dimensions($max-width: 100vw);
 
-  // background-color: var(--color-background);
-  background-color: rgb(6, 204, 6);
-
-  // @include breakpoint(l) {
-  //   padding: $buffer--l;
-  // }
+  background-color: var(--color-background);
+  // background-color: rgb(6, 204, 6);
 
   > div {
-    @include box-dimensions(
-      // s,
-      // $max-width: $max-width--root,
-      $margin: $center-me
-    );
+    @include box-dimensions($max-width: $max-width--root, $margin: $center-me);
   }
 }
