--- a/assets/styles/scss/waiting-on-migration/pages/home-webshop/_section-2--hot-items--old.scss
+++ b/assets/styles/scss/waiting-on-migration/pages/home-webshop/_section-2--hot-items--old.scss
@@ -74,8 +74,8 @@
   }
 
   &__caption-text::-webkit-scrollbar-thumb {
-    background-color: var(--color-background--darkest);
-    outline: 1px solid var(--color-text--lightest);
+    background-color: var(--color-background--darker);
+    outline: 1px solid var(--color-text--lighter);
   }
 
   &__caption-btns {
