--- a/assets/styles/scss/abstracts/variables/_variables--v2.scss
+++ b/assets/styles/scss/abstracts/variables/_variables--v2.scss
@@ -282,5 +282,6 @@ $card--aspect-ratio--landscape: 16 / 9;
 // *  <<--------------------<< Transitions >>-------------------->>
 $transition--default: all 0.35s ease;
 $transition--transform: transform 0.35s ease;
+$transition--color: color 0.35s ease;
 
 // *  <<--------------------<< Other >>-------------------->>
