--- a/assets/styles/scss/abstracts/mixins/_transitions.scss
+++ b/assets/styles/scss/abstracts/mixins/_transitions.scss
@@ -19,16 +19,12 @@
 // -  <---------------| Header-Transition--Slidedown |--------------->
 @mixin header-transition--slidedown {
   transform: translateY(0);
-  transition:
-    background 0.3s,
+  transition: background 0.3s,
     -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
-  transition:
-    transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1),
+  transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1),
     background 0.3s;
-  transition:
-    transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1),
-    background 0.3s,
-    -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
+  transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1),
+    background 0.3s, -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
   will-change: transform;
 }
 
@@ -40,10 +36,8 @@
 // -  <---------------| Click-Transition--Small |--------------->
 @mixin click-transition--small {
   cursor: pointer;
-  transition:
-    background-color 0.1s linear,
-    border-color 0.1s linear,
-    color 0.1s linear,
-    box-shadow 0.1s linear,
-    transform 0.1s ease;
+  transition: background-color 0.1s linear, border-color 0.1s linear,
+    color 0.1s linear, box-shadow 0.1s linear, transform 0.1s ease;
 }
+
+
