development-main:  with Marie Kondo

--- a/assets/styles/scss/abstracts/mixins/_typography.scss
+++ b/assets/styles/scss/abstracts/mixins/_typography.scss
@@ -149,6 +149,7 @@
     font-variant: $font-variant--text-bigger;
     font-weight: $font-weight--text-bigger;
     line-height: $line-height--text-bigger;
+    text-transform: lowercase;
   }
 
   // #  TIER 10 : Component-Smaller
