--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -29,7 +29,6 @@
 .root {
   width: 100%;
   max-width: 100vw;
-  padding: null;
 }
 
 .main__container > section {
@@ -85,7 +84,6 @@
 .box-outer {
   width: 100%;
   height: 100%;
-  padding: null;
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -319,7 +317,6 @@ body {
 \* -------------------------------------------------------------------------- */
 div {
   width: 100%;
-  padding: null;
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -425,7 +422,6 @@ footer > div {
 main {
   width: 100%;
   max-width: 100vw;
-  padding: null;
   background-color: var(--color-background);
 }
 
@@ -433,7 +429,6 @@ main > div {
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
-  padding: null;
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -553,7 +548,6 @@ h6 + p::first-letter {
 \* -------------------------------------------------------------------------- */
 dl {
   width: 100%;
-  padding: null;
   padding: 0.25rem 0;
   color: var(--color-primary);
   font-family: "Roboto", sans-serif;
@@ -563,11 +557,11 @@ dl {
   font-variant: normal;
   font-weight: 500;
   line-height: 1.25;
+  text-transform: lowercase;
 }
 
 dt {
   width: 100%;
-  padding: null;
   padding: 0.25rem 0;
   color: var(--color-text);
   font-family: "Poppins", sans-serif;
@@ -581,7 +575,6 @@ dt {
 
 dd {
   width: 100%;
-  padding: null;
   padding: 0.125rem 0;
   color: var(--color-text--light);
   font-family: "Poppins", sans-serif;
@@ -598,7 +591,6 @@ dd {
 \* -------------------------------------------------------------------------- */
 figure {
   width: 100%;
-  padding: null;
   padding: 0.25rem 0;
   color: var(--color-primary);
   font-family: "Roboto", sans-serif;
@@ -608,11 +600,11 @@ figure {
   font-variant: normal;
   font-weight: 500;
   line-height: 1.25;
+  text-transform: lowercase;
 }
 
 figcaption {
   width: 100%;
-  padding: null;
   padding: 0.25rem 0;
   color: var(--color-text);
   font-family: "Poppins", sans-serif;
@@ -629,7 +621,6 @@ figcaption {
 \* -------------------------------------------------------------------------- */
 ol {
   width: 100%;
-  padding: null;
   padding: 0.25rem 0;
   color: var(--color-primary);
   font-family: "Roboto", sans-serif;
@@ -639,12 +630,12 @@ ol {
   font-variant: normal;
   font-weight: 500;
   line-height: 1.25;
+  text-transform: lowercase;
   padding: 0;
 }
 
 ul {
   width: 100%;
-  padding: null;
   padding: 0.25rem 0;
   color: var(--color-primary);
   font-family: "Roboto", sans-serif;
@@ -654,12 +645,12 @@ ul {
   font-variant: normal;
   font-weight: 500;
   line-height: 1.25;
+  text-transform: lowercase;
   padding: 0;
 }
 
 li {
   width: 100%;
-  padding: null;
   padding: 0.25rem 0;
   color: var(--color-text);
   font-family: "Poppins", sans-serif;
@@ -685,7 +676,6 @@ li > a {
 \* -------------------------------------------------------------------------- */
 address {
   width: 100%;
-  padding: null;
   padding: 0.25rem 0;
   color: var(--color-text);
   font-family: "Poppins", sans-serif;
@@ -699,7 +689,6 @@ address {
 
 blockquote {
   width: 100%;
-  padding: null;
   padding: 0.125rem 0;
   color: var(--color-text--light);
   font-family: "Poppins", sans-serif;
@@ -714,7 +703,6 @@ blockquote {
 
 blockquote cite {
   width: 100%;
-  padding: null;
   padding: 0.125rem 0;
   color: var(--color-text--light);
   font-family: "Poppins", sans-serif;
@@ -730,14 +718,12 @@ hr {
   width: 100%;
   height: 4px;
   margin: 0.5rem 0;
-  padding: null;
   background-image: -webkit-gradient(linear, left top, right top, from(hsla(var(--color-primary-h), var(--color-primary-s), var(--color-primary-l), 0.25)), color-stop(hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0.5)), color-stop(hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0.75)), color-stop(hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 1)), color-stop(hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0.75)), color-stop(hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0.5)), to(hsla(var(--color-primary-h), var(--color-primary-s), var(--color-primary-l), 0.25)));
   background-image: linear-gradient(to right, hsla(var(--color-primary-h), var(--color-primary-s), var(--color-primary-l), 0.25), hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0.5), hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0.75), hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 1), hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0.75), hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0.5), hsla(var(--color-primary-h), var(--color-primary-s), var(--color-primary-l), 0.25));
 }
 
 p {
   width: 100%;
-  padding: null;
   padding: 0.25rem 0;
   color: var(--color-text);
   font-family: "Poppins", sans-serif;
@@ -751,7 +737,6 @@ p {
 
 pre {
   width: 100%;
-  padding: null;
   padding: 0.125rem 0;
   color: var(--color-text--light);
   font-family: "Poppins", sans-serif;
@@ -779,6 +764,7 @@ b {
   font-variant: normal;
   font-weight: 500;
   line-height: 1.25;
+  text-transform: lowercase;
 }
 
 code {
@@ -806,6 +792,7 @@ em {
   font-variant: normal;
   font-weight: 500;
   line-height: 1.25;
+  text-transform: lowercase;
 }
 
 i {
@@ -899,6 +886,7 @@ strong {
   font-variant: normal;
   font-weight: 500;
   line-height: 1.25;
+  text-transform: lowercase;
 }
 
 sub {
@@ -968,6 +956,7 @@ a {
   font-variant: normal;
   font-weight: 500;
   line-height: 1.25;
+  text-transform: lowercase;
   position: relative;
   padding: 0.25rem 0;
   font-family: 'Roboto Mono', monospace;
@@ -1040,6 +1029,7 @@ abbr {
   font-variant: normal;
   font-weight: 500;
   line-height: 1.25;
+  text-transform: lowercase;
   border-bottom: 1px dotted var(--color-tertiary);
 }
 
@@ -1089,6 +1079,7 @@ data {
   font-variant: normal;
   font-weight: 500;
   line-height: 1.25;
+  text-transform: lowercase;
   font-variant: small-caps;
 }
 
@@ -1102,6 +1093,7 @@ dfn {
   font-variant: normal;
   font-weight: 500;
   line-height: 1.25;
+  text-transform: lowercase;
 }
 
 q {
@@ -1136,6 +1128,7 @@ time {
   font-variant: normal;
   font-weight: 500;
   line-height: 1.25;
+  text-transform: lowercase;
 }
 
 wbr {
@@ -1173,7 +1166,6 @@ span {
 \* -------------------------------------------------------------------------- */
 img {
   width: 100%;
-  padding: null;
   background-color: var(--bg-color--transparant---softest);
   color: var(--color-text);
   -o-object-fit: cover;
@@ -1184,7 +1176,6 @@ img {
 
 video {
   width: 100%;
-  padding: null;
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -1195,7 +1186,6 @@ video {
 \* -------------------------------------------------------------------------- */
 svg {
   width: 100%;
-  padding: null;
   color: var(--color-primary);
   fill: var(--color-primary);
   -o-object-fit: cover;
