development-main:  tidying up v2

--- a/assets/styles/scss/base/_b-block-text.scss
+++ b/assets/styles/scss/base/_b-block-text.scss
@@ -141,6 +141,8 @@ hr {
 p {
   @include box-dimensions;
   @include font(text);
+
+  overflow: auto;
 }
 
 // #  <---------------| <pre> |--------------->
