--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -297,11 +297,6 @@
   margin: 0;
 }
 
-html {
-  font-size: 1rem;
-  font-size: clamp(1rem, 0.5rem + 1.25vw, 1.25rem);
-}
-
 body {
   display: block;
   margin: 0 auto;
@@ -733,6 +728,7 @@ p {
   font-variant: normal;
   font-weight: 400;
   line-height: 1.5;
+  overflow: auto;
 }
 
 pre {
