--- a/assets/styles/css/style-recourses.css
+++ b/assets/styles/css/style-recourses.css
@@ -23,12 +23,13 @@
 }
 
 .root {
-  width: 100%;
-  max-width: 100vw;
+  width: 100vw;
+  margin: 0 auto;
 }
 
-.main__container > section {
-  min-height: 100vh;
+.main {
+  width: 100vw;
+  background-color: var(--color-background);
 }
 
 .inline-flex {
