--- a/assets/styles/scss/abstracts/mixins/components/_c-main-header.scss
+++ b/assets/styles/scss/abstracts/mixins/components/_c-main-header.scss
@@ -5,9 +5,9 @@
 // -  <---------------| Main-Header |--------------->
 @mixin main-header {
   .c-header {
-    // position: fixed;
+    position: fixed;
     z-index: 1;
-    top: 0;
+    // top: 0;
     padding-top: $buffer--s;
     padding-bottom: $buffer--s;
     filter: drop-shadow(
